# chessboard-colormodel

./: README.md  pyproject.toml  requirements.txt
src/: snaketalk.py
